--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
 <html>
-
-<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
-<form>
-    <input type="text">
-    <input value="google search" type="button">
-    <input value="I'm feeling lucky" type="button">
-</form>
+ <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
 
 </html>
