add form tags. include button types. include search form

--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
- <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
+    <p>About</p>
+    <p>Store</p>
+    <p>Gmail</p>
+    <p>Images</p>
+    <!-- there is a little 3x3 link for google apps -->
+    <!-- a line to put a personlised Display Picture -->
+    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
+    <form>
+        <input type="submit" value="google serch">
+        <input type="submit" value="I'm feeling lucky">
+    </form>
 
 </html>
