div all the Paragraphs. add in Bushfire HYPlink

--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <p>About</p>
-    <p>Store</p>
-    <p>Gmail</p>
-    <p>Images</p>
+    <div>
+        <p>About</p>
+    </div>
+    <div>
+        <p>Store</p>
+    </div>
+    <div>
+        <p>Gmail</p>
+    </div>
+    <div>
+        <p>Images</p>
+    </div>
     <!-- there is a little 3x3 link for google apps -->
     <!-- a line to put a personlised Display Picture -->
-    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
+    <div>
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
+    </div>
     <form>
         <input type="submit" value="google serch">
         <input type="submit" value="I'm feeling lucky">
     </form>
+    <a href="newsonbushfire.com">Get updates on the bushfires</a>
 
 </html>
