rectify forgotten search form

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
     </div>
     <form>
+        <input type="search">
         <input type="submit" value="google serch">
         <input type="submit" value="I'm feeling lucky">
     </form>
