--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <div>
-        <p>About</p>
-    </div>
-    <div>
-        <p>Store</p>
-    </div>
-    <div>
-        <p>Gmail</p>
-    </div>
-    <div>
-        <p>Images</p>
-    </div>
-    <!-- there is a little 3x3 link for google apps -->
-    <!-- a line to put a personlised Display Picture -->
-    <div>
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
-    </div>
+
+<body>
+
+    
+    <p>About</p>
+    <p>Store</p>
+    <p>Gmail</p>
+    <p>Images</p>
+    
+     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
+   
     <form>
         <input type="search">
         <input type="submit" value="google serch">
         <input type="submit" value="I'm feeling lucky">
     </form>
     <a href="newsonbushfire.com">Get updates on the bushfires</a>
+
+</body>
 
 </html>
