add Nav tag and UL tags

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
     <head>
         <title>google</title>
@@ -7,10 +7,16 @@
     <body>
 
         <header>
-            <p>About</p>
-            <p>Store</p>
-            <p>Gmail</p>
-            <p>Images</p>
+            <nav>
+                <ul>
+                    <li>About</li>
+                    <li>Store</li>
+                    <li>Gmail</li>
+                    <li> Images</li>
+                    <!--Some 3x3 images that is used to get to the App pages-->
+                    <!--A Display Picture that is circular goes here-->
+                </ul>
+            </nav>
         </header>
 
         <main>
@@ -32,7 +38,7 @@
             </section>
 
         </main> 
-           
+
     </body>
 
     <footer>
