--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
 
         <header>
             <nav>
-                <ul>
-                    <li>About</li>
-                    <li>Store</li>
-                    <li>Gmail</li>
-                    <li> Images</li>
+                <a href="about.com">About</a>
+                <a href="store.com">Store</a>
+                <a href="gmail.com">Gmail</a>
+                <a href="images.com">Images</a>
                     <!--Some 3x3 images that is used to get to the App pages-->
                     <!--A Display Picture that is circular goes here-->
-                </ul>
             </nav>
         </header>
 
