--- a/index.html
+++ b/index.html
@@ -38,7 +38,17 @@
         </main> 
 
         <footer>
-            
+            <p> Australia</p>
+            <hr>
+            <nav>
+                <a href="advertising.com">Advertising</a>
+                <a href="Buisness.com">Buisness</a>
+                <a href="howsearchingworks.com">How Searching works</a>
+                <a href="privacy.com">Privacy</a>
+                <a href="terms.com">Terms</a>
+                <a href="settings.com">Settings</a>
+            </nav>
+
         </footer>
 
     </body>
