--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
         <header>
             <nav>
-                <a href="about.com">About</a>
-                <a href="store.com">Store</a>
-                <a href="gmail.com">Gmail</a>
-                <a href="images.com">Images</a>
+                <a class="about" href="about.com">About</a>
+                <a class="store" href="store.com">Store</a>
+                <a class="gmail" href="gmail.com">Gmail</a>
+                <a class="imagaes" href="images.com">Images</a>
                     <!--Some 3x3 images that is used to get to the App pages-->
                     <!--A Display Picture that is circular goes here-->
             </nav>
@@ -20,19 +20,19 @@
         <main>
 
             <section>
-                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
+                <img class="google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
             </section>
 
             <section>
                 <form>
-                    <input type="search">
-                    <input type="submit" value="google serch">
-                    <input type="submit" value="I'm feeling lucky">
+                    <input class="search" type="search">
+                    <input class="goo_search" type="submit" value="google serch">
+                    <input class="lucky" type="submit" value="I'm feeling lucky">
                 </form>
             </section>
 
             <section>
-                <a href="newsonbushfire.com">Get updates on the bushfires</a>
+                <a class="updates" href="newsonbushfire.com">Get updates on the bushfires</a>
             </section>
 
         </main> 
@@ -41,12 +41,12 @@
             <p> Australia</p>
             <hr>
             <nav>
-                <a href="advertising.com">Advertising</a>
-                <a href="Buisness.com">Buisness</a>
-                <a href="howsearchingworks.com">How Searching works</a>
-                <a href="privacy.com">Privacy</a>
-                <a href="terms.com">Terms</a>
-                <a href="settings.com">Settings</a>
+                <a class="advert" href="advertising.com">Advertising</a>
+                <a class="Buisness" href="Buisness.com">Buisness</a>
+                <a class="working" href="howsearchingworks.com">How Searching works</a>
+                <a class="privacy" href="privacy.com">Privacy</a>
+                <a class="terms" href="terms.com">Terms</a>
+                <a class="settings" href="settings.com">Settings</a>
             </nav>
 
         </footer>
