add css file to html. center google img

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
  <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="stylesheet.css">
         <title>google</title>
     </head>
 
@@ -19,8 +20,8 @@
 
         <main>
 
-            <section>
-                <img class="google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
+            <section class="google">
+                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
             </section>
 
             <section>
