edit incorrect class placment

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
         <main>
 
-            <section class="google">
-                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
+            <section>
+                <img class="google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
             </section>
 
             <section>
