work on text align.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a class="about" href="about.com">About</a>
                 <a class="store" href="store.com">Store</a>
                 <a class="gmail" href="gmail.com">Gmail</a>
-                <a class="imagaes" href="images.com">Images</a>
+                <a class="images" href="images.com">Images</a>
                     <!--Some 3x3 images that is used to get to the App pages-->
                     <!--A Display Picture that is circular goes here-->
             </nav>
