--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <body>
         <header>
             <nav>
-                <a class="about" href="about.com">About</a>
-                <a class="store" href="store.com">Store</a>
-                <a class="gmail" href="gmail.com">Gmail</a>
-                <a class="images" href="images.com">Images</a>
+                <ul>
+                    <li><a class="about" href="about.com">About</a></li>
+                    <li><a class="store" href="store.com">Store</a></li>
+                    <li><a class="gmail" href="gmail.com">Gmail</a></li>
+                    <li><a class="images" href="images.com">Images</a></li>
                     <!--Some 3x3 images that is used to get to the App pages-->
                     <!--A Display Picture that is circular goes here-->
+                </ul>
             </nav>
         </header>
         <main>
