--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <header>
             <nav>
                 <ul>
-                    <li><a class="about" href="about.com">About</a></li>
-                    <li><a class="store" href="store.com">Store</a></li>
-                    <li><a class="gmail" href="gmail.com">Gmail</a></li>
-                    <li><a class="images" href="images.com">Images</a></li>
+                    <li><a class="about" href="#">About</a></li>
+                    <li><a class="store" href="#">Store</a></li>
+                    <li><a class="gmail" href="#">Gmail</a></li>
+                    <li><a class="images" href="#">Images</a></li>
                     <!--Some 3x3 images that is used to get to the App pages-->
                     <!--A Display Picture that is circular goes here-->
                 </ul>
