seperate ul tags

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <body>
         <header>
             <nav>
-                <ul>
+                <ul id="left_menu">
                     <li><a class="about" href="#">About</a></li>
                     <li><a class="store" href="#">Store</a></li>
+                </ul>
+                <ul id="right_menu">
                     <li><a class="gmail" href="#">Gmail</a></li>
                     <li><a class="images" href="#">Images</a></li>
                     <!--Some 3x3 images that is used to get to the App pages-->
