add id search to section

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <section>
                 <img class="google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
             </section>
-            
-            <section>
+
+            <section id="Search">
                 <form>
                     <input class="search" type="search">
                     <input class="goo_search" type="submit" value="google serch">
