fix class and ul issues

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <header>
-            <nav>
+            <nav class="info">
                 <ul id="left_menu">
                     <li><a class="about" href="#">About</a></li>
                     <li><a class="store" href="#">Store</a></li>
