--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
 
     <body>
         <header>
-            <nav class="info">
-                <ul id="left_menu">
+            <nav id="info">
+                <ul id="top_info">
                     <li><a class="about" href="#">About</a></li>
                     <li><a class="store" href="#">Store</a></li>
-                </ul>
-                
-                <ul id="right_menu">
                     <li><a class="gmail" href="#">Gmail</a></li>
                     <li><a class="images" href="#">Images</a></li>
                     <!--Some 3x3 images that is used to get to the App pages-->
