--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <footer>
             <p> Australia</p>
             <hr>
-            <nav>
+            <nav id="foot">
                 <a class="advert" href="advertising.com">Advertising</a>
                 <a class="Buisness" href="Buisness.com">Buisness</a>
                 <a class="working" href="howsearchingworks.com">How Searching works</a>
