--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <body>
         <header>
             <nav id="info">
-                <ul id="top_info">
+                <ul class="top">
                     <li><a class="about" href="#">About</a></li>
                     <li><a class="store" href="#">Store</a></li>
                     <li><a class="gmail" href="#">Gmail</a></li>
                     <li><a class="images" href="#">Images</a></li>
+                </ul>
                     <!--Some 3x3 images that is used to get to the App pages-->
                     <!--A Display Picture that is circular goes here-->
                 </ul>
