--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 
     <body>
         <header>
-            <nav id="info">
-                <ul class="top">
+            <nav class="info">
+                <ul class="left">
                     <li><a class="about" href="#">About</a></li>
                     <li><a class="store" href="#">Store</a></li>
+                </ul>
+                <ul class="right">
                     <li><a class="gmail" href="#">Gmail</a></li>
-                    <li class="images"><a href="#">Images</a></li>
+                    <li><a class="images" href="#">Images</a></li>
                 </ul>
                     <!--Some 3x3 images that is used to get to the App pages-->
                     <!--A Display Picture that is circular goes here-->
