flexbox bug fix

--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
             </nav>
         </header>
         <main>
+            <div>
+                <section class="img">
+                    <img class="google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
+                </section>
 
-            <section>
-                <img class="google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
-            </section>
+                <section class="Srch">
+                    <form class="form">
+                        <input class="search" type="search">
+                        <input class="goo_search" type="submit" value="google serch">
+                        <input class="lucky" type="submit" value="I'm feeling lucky">
+                    </form>
+                </section>
 
-            <section id="Search">
-                <form>
-                    <input class="search" type="search">
-                    <input class="goo_search" type="submit" value="google serch">
-                    <input class="lucky" type="submit" value="I'm feeling lucky">
-                </form>
-            </section>
-
-            <section>
-                <a class="updates" href="newsonbushfire.com">Get updates on the bushfires</a>
-            </section>
-
+                <section id="update">
+                    <a class="updates" href="newsonbushfire.com">Get updates on the bushfires</a>
+                </section>
+            </div>
         </main> 
 
         <footer>
