fix class and elements

--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
             </nav>
         </header>
         <main>
-            <div>
-                <section class="img">
+            <section id="mid-section">
+                <div class="img">
                     <img class="google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="googlelogo">
-                </section>
+                </div>
 
-                <section class="Srch">
+                <div class="Srch">
                     <form class="form">
                         <input class="search" type="search">
                         <input class="goo_search" type="submit" value="google serch">
                         <input class="lucky" type="submit" value="I'm feeling lucky">
                     </form>
-                </section>
+                </div>
 
-                <section id="update">
+                <div id="update">
                     <a class="updates" href="newsonbushfire.com">Get updates on the bushfires</a>
-                </section>
-            </div>
+                </div>
+            </section>
         </main> 
 
-        <footer>
+        <footer id="footer">
             <p> Australia</p>
-            <hr>
+
             <nav id="foot">
                 <a class="advert" href="advertising.com">Advertising</a>
                 <a class="Buisness" href="Buisness.com">Buisness</a>
